<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="marijansmetko.mojblokzabelu.MainActivity">

    <item
        android:id="@+id/action_obrisi"
        android:orderInCategory="0"
        android:title="@string/action_obrisi"
        app:showAsAction="ifRoom"
    />
    <item
        android:id="@+id/action_prethodne"
        android:orderInCategory="1"
        android:title="@string/action_prethodne"
    />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="2"
        android:title="@string/action_settings"
        app:showAsAction="never"
    />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="3"
        android:title="@string/action_about"
        app:showAsAction="never"
    />
</menu>
