<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="marijansmetko.mojblokzabelu.MainActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_mi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/label_mi"
            android:textAlignment="center"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/colon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="|"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/label_vi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/label_vi"
            android:textAlignment="center"
            android:textSize="36sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/bodovi_mi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/bodovi_hint"
            android:inputType="number"
        />
        <EditText
            android:id="@+id/bodovi_vi"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/bodovi_hint"
            android:inputType="number"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/zvanja_mi"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/zvanja_hint"
            android:inputType="number"
        />
        <EditText
            android:id="@+id/zvanja_vi"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/zvanja_hint"
            android:inputType="number"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/bela_mi"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/bela"/>
        <CheckBox
            android:id="@+id/bela_vi"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/bela"/>
    </LinearLayout>

    <TextView
        android:id="@+id/ukupan_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="999 | 999"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/bodovi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:lineSpacingExtra="4sp"
        android:text="162 |   0\n 75 |  87\n 21 | 141"
        android:textAlignment="center"
        android:textSize="24sp"
        android:typeface="monospace"
        android:paddingTop="5dp"/>

</LinearLayout>
